tests/fixtures/components/invalid-pure/auth.blade.php
@pure

<div>
    Welcome, {{ auth()->user()->name }}
</div>
